[tool.poetry]
name = "healthcare"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^1.0.11"
tensorflow = "^2.13.0"
scikit-learn = "^1.3.0"
keras = "^2.13.1"
datasets = "^2.14.5"
pillow = "^10.0.0"
matplotlib = "^3.7.2"
onnxruntime = "^1.15.1"
opencv-python = "^4.8.0.76"
transformers = "^4.33.1"
onnx = "^1.14.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
google-cloud-storage = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"
