[tool.poetry]
name = "healthcare"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader-helpers = "^1.0.20"
code-loader = "^1.0.145"
google-cloud-storage = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"
